[gd_scene load_steps=5 format=3 uid="uid://dxkjq5h8j3rnb"]

[ext_resource type="Script" path="res://Bullet.gd" id="1_bullet"]

[sub_resource type="SphereShape3D" id="SphereShape3D_bullet"]
radius = 0.05

[sub_resource type="SphereMesh" id="SphereMesh_bullet"]
radius = 0.05
height = 0.1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bullet"]
albedo_color = Color(1, 1, 0, 1)
emission_enabled = true
emission = Color(1, 1, 0, 1)

[node name="Bullet" type="RigidBody3D"]
collision_layer = 4
collision_mask = 6
gravity_scale = 0.0
contact_monitor = true
max_contacts_reported = 10
script = ExtResource("1_bullet")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_bullet")
material_override = SubResource("StandardMaterial3D_bullet")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_bullet")

[node name="LifetimeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_lifetime_timeout"]
